# network_tool

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
.cargo/: config.toml
src/: get_interfaces.rs  lib.rs  main.rs  web_server.rs
src/assets/: icon.rc  icon.rgba
src/client/: main.rs
src/common/: log.rs  mod.rs  utils.rs
src/server/: main.rs  mod.rs
src/server/controller/: mod.rs  net_status.rs
src/server/model/: common.rs  mod.rs  net_status.rs
src/server/router/: net_status.rs
src/server/service/: net_status.rs
src/tests/: common_utils_test.rs  mod.rs  server_net_status_test.rs  web_server_test.rs
tests/: common_utils_test.rs  server_net_status_test.rs
