[package]
name = "network_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
single-instance = "0.3"
tray-icon = "0.11"
# window-vibrancy = "0.4"  # 移除不必要的依赖
# window-shadows = "0.2"  # 移除不必要的依赖
# image = "0.24"  # image 库，当图片为非 rgba 格式时需要，用于将图片转换为 rgba 格式
winit = "0.28"
# get_interfaces 依赖
mac_address = "1.1"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
if-addrs = "0.10.1"
open = "3.2"
actix-cors = "0.6"
# 日志依赖
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
# 错误处理依赖
thiserror = "1.0"

[dependencies.windows]
version = "0.48"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[[bin]]
name = "network_tool"
path = "src/main.rs"
subsystem = "windows"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
# tokio = { version = "1.0", features = ["full"] } # 移入 dependencies
actix-rt = "2.8"

[build-dependencies]
embed-resource = "1.5.1"